media changes for smaller screens, need to fix what's hidden by the navbar when selecting items

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 #navbar {
     position: fixed;
     top: 0;
@@ -12,7 +11,7 @@
 #navbar a {
     text-decoration: none;
     list-style: none;
-    color: rgb(92, 88, 88);
+    color: rgb(37, 36, 36);
     text-indent: 30px;
 }
 
@@ -22,6 +21,7 @@
     border-right: 0px;
     border-color: dimgray;
     width: 300px;
+    font-size: 20px;
 }
 
 #navbar ul {
@@ -29,6 +29,7 @@
     display: block;
     margin-block-start: 0;
     padding: 0px;
+    font-size: 18px;
 }
 
 #navbar li {
@@ -48,4 +49,62 @@ main {
     margin-left: 300px;
     border-left: 1px solid;
     display: block;
+}
+
+.main-section {
+    padding-bottom: 20px;
+}
+
+.main-section header{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+@media (max-width: 1000px) {
+    #navbar {
+        position: fixed;
+        background-color: white;
+        top: 0;
+        left: 0;
+        width: 100%;
+        max-height: 178px;
+        min-width: 300px;
+        border-bottom: 2px solid;
+        z-index: 2;
+    }
+
+    #navbar header {
+        width: 100%;
+        border-top: 0px;
+        border-left: 0px;
+        border-bottom: 2px solid;
+        border-color: black;
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    #navbar li {
+        border-bottom: 1px solid;
+        border-top: 0px;
+        border-right: 0px;
+        border-color: dimgray;
+        width: 100%;
+    }
+
+    #navbar a {
+        text-indent: 60px;
+    }
+
+    #spacer {
+        height: 178px;
+        display: block;
+    }
+    #main-doc {
+        position: relative;
+        margin-left: 0px;
+        border-left: 0px;
+        display: block;
+
+    }
 }
